# M5Autodetect

./: CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
M5Autodetect_GUI/: M5Autodetect_CBuilder_GUI.py  M5Autodetect_CBuilder_GenCode.py  M5Flowchart_Demo.py  m5stack_dev_config.yaml  m5stack_dev_config_example.yaml  plan.md  requirements.txt
M5Autodetect_GUI/locales/: m5builder_en_US.json  m5builder_ja_JP.json
src/: M5Autodetect.cpp  M5Autodetect.h  M5Autodetect_Bus.cpp  M5Autodetect_Bus.h  M5Autodetect_Data.cpp  M5Autodetect_Data.h  M5Autodetect_SlefCheck.cpp  M5Autodetect_SlefCheck.h
src/bus/: M5Autodetect_Bus.h  M5Autodetect_I2CBus.cpp  M5Autodetect_SPIBus.cpp
src/data/: M5Autodetect_DeviceData.cpp  M5Autodetect_DeviceData.h
src/platform/: M5Autodetect_IdfI2C.cpp  M5Autodetect_IdfI2C.h  M5Autodetect_IdfSPI.cpp  M5Autodetect_IdfSPI.h  M5Autodetect_Runtime.cpp  M5Autodetect_Runtime.h
src/tools/: M5Autodetect_SelfCheck.cpp  M5Autodetect_SelfCheck.h
